# obsidian-retire

./: news.md  package-lock.json  server.js  업무분석  할일목록-옵시.md  할일목록.md
.claude/skills/patent-mcp-setup/scripts/: install.sh  pyproject.toml
.claude/skills/patent-mcp-setup/scripts/src/mcp_kipris/: sse_server.py
.claude/skills/patent-mcp-setup/scripts/src/mcp_kipris/kipris/: _config.py  _registry.py  abc.py
.claude/skills/patent-mcp-setup/scripts/src/mcp_kipris/kipris/api/: abs_class.py  utils.py
.claude/skills/patent-mcp-setup/scripts/src/mcp_kipris/kipris/api/foreign/: __init__.py  advanced_search_api.py  applicant_search.py  application_number_search.py  free_search_api.py  international_application_number_search.py  international_open_number_search.py  international_open_number_search_api.py  ipc_search_api.py
.claude/skills/patent-mcp-setup/scripts/src/mcp_kipris/kipris/api/korean/: applicant_search_api.py  application_number_search_api.py  free_search_api.py  patent_detail_search_api.py  patent_search_api.py  patent_summary_search_api.py  righter_search_api.py
.claude/skills/patent-mcp-setup/scripts/src/mcp_kipris/kipris/tools/: __init__.py  _base.py  _formatters.py  _schemas.py
.claude/skills/patent-mcp-setup/scripts/src/mcp_kipris/kipris/tools/foreign/: applicant_search_tool.py  application_number_search_tool.py  batch_export_tool.py  free_search_tool.py  international_application_number_search_tool.py  ipc_batch_export_tool.py  (+1 more)
.claude/skills/patent-mcp-setup/scripts/src/mcp_kipris/server/: __init__.py  __main__.py  _core.py  _sse.py  _stdio.py
(+113 files in other folders)
